# EUC_core

./: .gitignore  EUC_analysis.ipynb  EUC_page.ipynb  Landing_page.ipynb  README.md  main.py  master_pro.md  master_pro_V2.md  pyproject.toml  v9.csv  z10.csv
.ipynb_checkpoints/: EUC_analysis-checkpoint.ipynb  master_pro-checkpoint.md  master_pro_V2-checkpoint.md
analysis/: aero.md  apex.md  blitz.md  extreme_C36.md  lynx.md  master_pro_V2.md  mten4.md  s22_pro.md  v9.md  z10.md
analysis/.ipynb_checkpoints/: master_pro_V2-checkpoint.md
analysis/aero/: aero_0.md
analysis/apex/: apex_0.md
analysis/blitz/: blitz_0.md  blitz_1.md  blitz_2.md  blitz_3.md  blitz_4.md
analysis/extreme_C36/: extreme_C36_0.md
analysis/lynx/: lynx_2.md
analysis/master_pro_V2/: master_pro_V2_5.md
analysis/mten4/: mten4_0.md  mten4_1.md  mten4_2.md  mten4_3.md
analysis/s22_pro/: s22_pro_0.md
analysis/v9/: v9_0.md  v9_1.md  v9_2.md  v9_3.md  v9_4.md
analysis/z10/: z10_0.md  z10_1.md
charts/: power_mten4.html
specs/: apex.csv  blitz.csv  extreme_C36.csv  master_pro_V2.csv  mten4.csv  s22_pro.csv  t4_V3.csv  v9.csv  z10.csv
specs/.ipynb_checkpoints/: z10-checkpoint.csv
stats/aero/: conso.csv  env.csv
stats/apex/: summary.csv
stats/blitz/: conso.csv  env.csv  summary.csv
stats/extreme_C36/: env.csv
stats/master_pro_V2/: conso.csv  env.csv  summary.csv
stats/mten4/: conso.csv  env.csv  summary.csv
stats/s22_pro/: summary.csv
stats/v9/: conso.csv  env.csv  summary.csv
stats/z10/: conso.csv  env.csv  summary.csv
trips/mten4/: mten4_50S.csv  mten4_50s-2.csv
(+52 files in other folders)
