[project]
name = "euc-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataframe-image>=0.2.7",
    "jupyter>=1.1.1",
    "markdown-generator>=0.1.3",
    "matplotlib>=3.10.7",
    "mdutils>=1.8.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pylatex>=1.4.2",
    "seaborn>=0.13.2",
]
